[project]
name = "langchain-for-llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "openai>=1.61.0",
    "pandas>=2.2.3",
    "pypdf>=5.2.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
]
